WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281433
[WebGPU] webgpu.github.io/webgpu-samples/?sample=marchingCubes fails to compile shader
https://bugs.webkit.org/show_bug.cgi?id=281433
Summary
[WebGPU] webgpu.github.io/webgpu-samples/?sample=marchingCubes fails to compi...
Mike Wyrzykowski
Reported
2024-10-14 10:25:50 PDT
[WebGPU] webgpu.github.io/webgpu-samples/?sample=marchingCubes fails to compile shader Repro: (1) Open webgpu.github.io/webgpu-samples/?sample=marchingCubes (2) Note the compilation failure: program_source:49:69: error: pointer type must have explicit address space qualifier unsigned __global10_ArrayLength = (*(const unsigned*)((( uint8_t*)&(__ArgumentBuffer_1.__global10_ArrayLength)) + __DynamicOffsets[2u]));
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-14 10:26:10 PDT
<
rdar://problem/137885520
>
Mike Wyrzykowski
Comment 2
2024-10-14 15:56:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35178
EWS
Comment 3
2024-10-15 07:19:15 PDT
Committed
285189@main
(e8af88d2a5ea): <
https://commits.webkit.org/285189@main
> Reviewed commits have been landed. Closing PR #35178 and removing active labels.
EWS
Comment 4
2024-10-15 18:46:04 PDT
Committed
283286.291@safari-7620-branch
(abf4538f2423): <
https://commits.webkit.org/283286.291@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2033 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug