[WebGPU] webgpu.github.io/webgpu-samples/?sample=marchingCubes fails to compile shader (281433) https://bugs.webkit.org/show_bug.cgi?id=281433 rdar://137885520

Reviewed by Tadeu Zagallo.

Don't consider dynamic offsets for array length members.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::insertMaterializations):

Canonical link: https://commits.webkit.org/285189@main